more component improvements