@@ -3,7 +3,6 @@ package io.github.steaf23.playerdisplay.inventory.item;
 import com.google.common.collect.ImmutableMultimap;
 import io.github.steaf23.playerdisplay.inventory.BasicMenu;
 import io.github.steaf23.playerdisplay.inventory.item.action.MenuAction;
-import io.github.steaf23.playerdisplay.util.ComponentUtils;
 import io.github.steaf23.playerdisplay.util.ExtraMath;
 import io.github.steaf23.playerdisplay.util.PDCHelper;
 import net.kyori.adventure.text.Component;
@@ -102,10 +101,6 @@ public class ItemTemplate
         return addDescription("lore", 0, lore);
     }
 
-    public ItemTemplate addDescription(String name, int priority, String... description) {
-        return addDescription(name, priority, ComponentUtils.createComponentsFromString(description));
-    }
-
     public ItemTemplate addDescription(String name, int priority, Component... description) {
         if (description.length < 1) {
             return this;
@@ -161,8 +156,8 @@ public class ItemTemplate
         return this;
     }
 
-    public @Nullable String getCompareKey() {
-        return compareKey;
+    public String getCompareKey() {
+        return compareKey == null ? "" : compareKey;
     }
 
     public boolean isCompareKeyEqual(ItemStack other) {
@@ -270,7 +265,7 @@ public class ItemTemplate
         });
 
         if (!descriptionList.isEmpty()) {
-            descriptionList.remove(descriptionList.size() - 1);
+            descriptionList.removeLast();
         }
         ItemStack stack = new ItemStack(material, amount);
 
@@ -319,7 +314,7 @@ public class ItemTemplate
         return 9 * slotY + slotX;
     }
 
-    public static @Nullable ItemTemplate createColoredLeather(TextColor color, Material leatherMaterial) {
+    public static ItemTemplate createColoredLeather(TextColor color, Material leatherMaterial) {
         if (!LEATHER_ARMOR.contains(leatherMaterial)) {
             leatherMaterial = Material.LEATHER_CHESTPLATE;
         }
